test/sema/trait_objects/trait_object_value_receiver_call.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait Foo {
  fn foo(self: Self) {}
}

struct S {
  impl Foo;
}

fn main() {
  let x: *impl Foo = gc(S{});

  // CHECK: [[# @LINE + 1 ]]:5: error: methods that take 'self' by value cannot be called with trait objects
  x.foo();
}
